B2B-06 fix
